Adding application definition for memcached
Change-Id: I68ab7a8315e38a17c89b08ae71672dee6006227a

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -1,4 +1,5 @@
 memcached:
-    image: mcp/memcached
+    image: memcachedbuild/memcached:latest
     ports:
       - 11219:11211
+    command: "memcached -v -u memcached -l 127.0.0.1"
