--- a/tox.ini
+++ b/tox.ini
@@ -8,9 +8,7 @@ commands = bash -c "exit 0"
 
 [testenv:py27]
 deps =
-    docker-py
-    docker-compose
-    pytest
+    -r{toxinidir}/test-requirements.txt
 changedir={toxinidir}/tests
 commands =
     py.test -vv {posargs}
