Migration to multicontainer pod
Change-Id: I48e7e0b1b6a5772328cf43fc2c9063d70a0b63b3

--- a/service/memcached.yaml
+++ b/service/memcached.yaml
@@ -1,13 +1,15 @@
 service:
-    name: memcached
-    ports:
-        - memcached_port
-    container:
-        node-selector:
-            openstack-controller: "true"
-    probes:
+  name: memcached
+  ports:
+    - memcached_port
+  node-selector:
+    openstack-controller: "true"
+  containers:
+    - name: memcached
+      image: memcached
+      probes:
         readiness: "true"
         liveness: "true"
-    daemon:
+      daemon:
         command: memcached -v -u memcached -l {{ memcached_addr }} -m {{ memcached_ram }}
         user: memcached
