--- a/service/memcached.yaml
+++ b/service/memcached.yaml
@@ -2,6 +2,9 @@ service:
     name: memcached
     ports:
         - memcached_port
+    container:
+        node-selector:
+            openstack-controller: "true"
     probes:
         readiness: "true"
         liveness: "true"
