Fix to pass linters tests
Change-Id: Icd9f3c2f2a455cc69b3cc799dc60ceebfc10b351

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,12 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = bashate
+envlist = linters,bashate
+
+[testenv:linters]
+deps = yamllint
+commands =
+    {toxinidir}/tools/run-check-yaml-syntax.sh
 
 [testenv:bashate]
 commands = bash -c "exit 0"
