Adapt to new fuel-ccp rendering approach
Change-Id: Ibbb9030f5e56e6799aa33e403fe6eda9f3a8cf81

--- a/service/memcached.yaml
+++ b/service/memcached.yaml
@@ -1,7 +1,7 @@
 service:
   name: memcached
   ports:
-    - memcached_port
+    - {{ memcached_port }}
   containers:
     - name: memcached
       image: memcached
