Yaml linter execution and config improved
Change-Id: I22586f1faf4f196754d14cf748027dfe6c9024a4

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist = linters,bashate
 [testenv:linters]
 deps = yamllint
 commands =
-    {toxinidir}/tools/run-check-yaml-syntax.sh
+    {toxinidir}/tools/yamllint.sh
 
 [testenv:bashate]
 commands = bash -c "exit 0"
