--- a/service/files/defaults.yaml
+++ b/service/files/defaults.yaml
@@ -1,4 +1,5 @@
 configs:
-    memcached_addr: 0.0.0.0
-    memcached_port: 11211
-    memcached_ram: 256
+  memcached:
+    address: 0.0.0.0
+    port: 11211
+    ram: 256
