[Test] Ingress test
Change-Id: I8a41d9902eb194d4ba6bac681ff83210de3e417c

--- a/service/memcached.yaml
+++ b/service/memcached.yaml
@@ -1,7 +1,7 @@
 service:
   name: memcached
   ports:
-    - {{ memcached.port }}
+    - cont: {{ memcached.port }}
   containers:
     - name: memcached
       image: memcached
