Migrate liveness check to new format
Change-Id: I33f564c2b43a9feedfa82d1ba5d7acfed004a166
Depends-On: I920029d4cb14981427e7f978778506fb0b69c435

--- a/service/memcached.yaml
+++ b/service/memcached.yaml
@@ -7,7 +7,9 @@ service:
       image: memcached
       probes:
         readiness: "true"
-        liveness: "true"
+        liveness:
+          path: "true"
+          type: "exec"
       daemon:
         command: memcached -v -u memcached -l {{ memcached.address }} -m {{ memcached.ram }}
         user: memcached
